Fix opponent avatar name contrast

--- a/components/PoliticianPage/ElectionInfo/ElectionInfoSection.module.scss
+++ b/components/PoliticianPage/ElectionInfo/ElectionInfoSection.module.scss
@@ -42,6 +42,10 @@ $box-height: 14rem;
     display: flex;
     align-items: baseline;
   }
+
+  .avatarName {
+    color: inherit;
+  }
 }
 
 section.wrapper {
